--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^4.0.0",
+    "@sanity/image-url": "^1.0.1",
+    "framer-motion": "8.1.3",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "shooting-stars": "^0.0.6"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "10.4.13",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "postcss": "8.4.20",
+    "tailwindcss": "3.2.4",
     "typescript": "4.9.4"
   }
 }
